# nokiaPhone

./: CMakeLists.txt  KeBoard.qml  Main.qml  README.md  main.cpp  myphone.cpp  myphone.h  phonebook.cpp  phonebook.h
